--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,13 @@ lintian (2.5.119) UNRELEASED; urgency=medium
   * data/debhelper/compat-level:
     + [CL] Bump the recommended and experimental debhelper compat levels to
       12 and 13 respectfully.  (Closes: #917344)
+  * data/files/js-libraries:
+    + [BR] Detect the html5shiv library. This library is the de facto way
+      to enable the use of HTML5 "sectioning" elements in legacy Internet
+      Explorer.
+  * data/files/privacy-breaker-websites:
+    + [BR] Suggest using libjs-html5shiv over linking to an external
+      version.
 
  -- Chris Lamb <lamby@debian.org>  Sun, 23 Dec 2018 17:18:55 +0000
 
