--- a/t/tests/files-embedded/debian/install
+++ b/t/tests/files-embedded/debian/install
@@ -1,5 +1,6 @@
 IPv4.php usr/share/php
 jquery*  usr/share/php
+mocha.* usr/share/javascript/mocha
 bootstrap-*  usr/share/php
 bootstrap.js  usr/share/xul-ext/lintian
 feedparser.py usr/share/php
