--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,10 @@ lintian (2.5.119) UNRELEASED; urgency=medium
       column 1 of the file and not be indented to align with the symbols
       themselves.
 
+  * data/debhelper/compat-level:
+    + [CL] Bump the recommended and experimental debhelper compat levels to
+      12 and 13 respectfully.  (Closes: #917344)
+
  -- Chris Lamb <lamby@debian.org>  Sun, 23 Dec 2018 17:18:55 +0000
 
 lintian (2.5.118) unstable; urgency=medium
