--- a/debian/changelog
+++ b/debian/changelog
@@ -27,9 +27,11 @@ lintian (2.5.119) UNRELEASED; urgency=medium
       to enable the use of HTML5 "sectioning" elements in legacy Internet
       Explorer.
     + [BR] Detect the mocha testing framework and recommend libjs-mocha.
+    + [BR] Detect the "chai" testing framework, recommending libjs-chai.
   * data/files/privacy-breaker-websites:
     + [BR] Suggest using libjs-html5shiv over linking to an external
       version.
+    + [BR] Detect the libjs-chai package.
     + [BR] Detect the libjs-expect.js package.
 
  -- Chris Lamb <lamby@debian.org>  Sun, 23 Dec 2018 17:18:55 +0000
