Remove a tag that is no longer emitted. (!MR 112)
Together with Dh-Compat-Level: 12 in 'desc', the default builder
supplies the correct dependency via:

Default-Build-Depends: debhelper (>= {$dh_compat_level}~)

The tag complaining about lack of a version is no longer issued.
Removing it from the list of expected tags.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,10 @@ lintian (2.5.119) unstable; urgency=medium
   * data/spelling/corrections:
     + [PW] Add a number of corrections.
 
+  * t/tests/debhelper-compat-experimental/tags:
+    + [CL] Apply a patch from Felix Lechner to remove a tag that is no
+      longer emitted.  (MR: !112)
+
  -- Chris Lamb <lamby@debian.org>  Fri, 28 Dec 2018 18:37:31 +0000
 
 lintian (2.5.118) unstable; urgency=medium
