Revert "Release lintian/2.5.119 into unstable."
Was a premature attempt at releasing but I left this commit locally which I
then accidentally pushed in e087177993a28b522cfd70c235d89bad6034c4e0.

This reverts commit b9f9ad4630939de139b5a360443075833212c459.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-lintian (2.5.119) unstable; urgency=medium
+lintian (2.5.119) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
 
   * checks/changelog-file.pm:
     + [CL] Avoid false-positives in changelog-file-missing-explicit-entry
@@ -35,14 +37,12 @@ lintian (2.5.119) unstable; urgency=medium
       version.
     + [BR] Detect the libjs-chai package.
     + [BR] Detect the libjs-expect.js package.
-  * data/spelling/corrections:
-    + [PW] Add a number of corrections.
 
   * t/tests/debhelper-compat-experimental/tags:
     + [CL] Apply a patch from Felix Lechner to remove a tag that is no
       longer emitted.  (MR: !112)
 
- -- Chris Lamb <lamby@debian.org>  Fri, 28 Dec 2018 18:37:31 +0000
+ -- Chris Lamb <lamby@debian.org>  Sun, 23 Dec 2018 17:18:55 +0000
 
 lintian (2.5.118) unstable; urgency=medium
 
