--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ lintian (2.5.119) UNRELEASED; urgency=medium
     + [CL] Clarify that "Build-Depends-Package" lines should start in
       column 1 of the file and not be indented to align with the symbols
       themselves.
+  * checks/upstream-signing-key.pm:
+    + [CL] Apply a patch from Felix Lechner to provide writable temporary
+      home directory for GPG.  (Closes: #913930)
 
   * data/debhelper/compat-level:
     + [CL] Bump the recommended and experimental debhelper compat levels to
