--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,4 @@
-lintian (2.5.119) UNRELEASED; urgency=medium
-
-  XXX: generate tag summary
+lintian (2.5.119) unstable; urgency=medium
 
   * checks/changelog-file.pm:
     + [CL] Avoid false-positives in changelog-file-missing-explicit-entry
@@ -40,6 +38,8 @@ lintian (2.5.119) UNRELEASED; urgency=medium
       version.
     + [BR] Detect the libjs-chai package.
     + [BR] Detect the libjs-expect.js package.
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * debian/control:
     + [CL] Move to debhelper compatibility level 12.
@@ -54,7 +54,7 @@ lintian (2.5.119) UNRELEASED; urgency=medium
     + [CL] Apply a patch from Felix Lechner to remove a tag that is no
       longer emitted.  (MR: !112)
 
- -- Chris Lamb <lamby@debian.org>  Sun, 23 Dec 2018 17:18:55 +0000
+ -- Chris Lamb <lamby@debian.org>  Tue, 01 Jan 2019 14:55:01 +0000
 
 lintian (2.5.118) unstable; urgency=medium
 
