--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.120) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 01 Jan 2019 15:10:19 +0000
+
 lintian (2.5.119) unstable; urgency=medium
 
   * checks/changelog-file.pm:
