Handle systemd service templates for missing init scripts
Do not emit the following errors when a systemd service template (a
NAME@.service file) matches a similar init script (a /etc/init.d/NAME):

 missing-systemd-service-for-init.d-script
 omitted-systemd-service-for-init.d-script

Assume that the systemd service template goes with the init script.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.120) UNRELEASED; urgency=medium
   * checks/{menus,patch-systems}.desc:
     + [CL] Clarify that spelling-* tags also correct various grammatical
       errors too.
+  * checks/systemd.pm:
+    + [CL] Apply a patch from Robin Jarry to handle service
+      templates for missing init scripts.  (MR: !115)
 
   * lib/Lintian/Util.pm:
     + [CL] Add optional support for stripping comments at EOL in
