--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,10 @@ lintian (2.5.120) UNRELEASED; urgency=medium
     + [CL] Apply a patch from Robin Jarry to handle service
       templates for missing init scripts.  (MR: !115)
 
+  * data/systemd/init-whitelist:
+    + [CL] Add "brightness" to the list of initscripts that do not need a
+      corresponding service file.  (Closes: #918459)
+
   * lib/Lintian/Util.pm:
     + [CL] Add optional support for stripping comments at EOL in
       read_dpkg_control via DCTRL_COMMENTS_AT_EOL.  (Closes: #917964)
