--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-lintian (2.5.120) UNRELEASED; urgency=medium
+lintian (2.5.120) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Removed:
+      - versioned-dependency-satisfied-by-perl
 
   * checks/binaries.pm:
     + [CL] Guile object files do not objdump/strip correctly so exclude
@@ -36,7 +38,7 @@ lintian (2.5.120) UNRELEASED; urgency=medium
     + [CL] Add optional support for stripping comments at EOL in
       read_dpkg_control via DCTRL_COMMENTS_AT_EOL.  (Closes: #917964)
 
- -- Chris Lamb <lamby@debian.org>  Tue, 01 Jan 2019 15:10:19 +0000
+ -- Chris Lamb <lamby@debian.org>  Mon, 07 Jan 2019 22:19:07 +0000
 
 lintian (2.5.119) unstable; urgency=medium
 
