--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.121) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 07 Jan 2019 23:35:43 +0100
+
 lintian (2.5.120) unstable; urgency=medium
 
   * Summary of tag changes:
