Fix debhelper-compat-experimental test after compat upgrade. (!MR 117)
This test was recently adjusted to the new experimental debhelper
compat level, but unfortunately commit da1b7a36 also implicitly
required debhelper 13. As a result, the test never ran. The point of
the test, however, is to select the experimental level when using the
version below. The test now runs as intended.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.121) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * t/*:
+    + [CL] Apply a patch from Felix Lechner to ensure the
+      debhelper-compat-experimental tag is run after the upgrade to
+      debhelper compat level 12.  (MR: !117)
+
  -- Chris Lamb <lamby@debian.org>  Mon, 07 Jan 2019 23:35:43 +0100
 
 lintian (2.5.120) unstable; urgency=medium
