Apply a patch series from Felix Lechner to support adaptive rebuilding, speeding up the test test suite speeds up by a factor of 17 (excluding "scripts" tests). (MR: !118)
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ lintian (2.5.121) UNRELEASED; urgency=medium
     + [CL] Apply a patch from Felix Lechner to ensure the
       debhelper-compat-experimental tag is run after the upgrade to
       debhelper compat level 12.  (MR: !117)
+    + [CL] Apply a patch series from Felix Lechner to support adaptive
+      rebuilding, speeding up the test test suite speeds up by a factor of
+      17 (excluding "scripts" tests).  (MR: !118)
 
  -- Chris Lamb <lamby@debian.org>  Mon, 07 Jan 2019 23:35:43 +0100
 
