--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.121) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/scripts.pm:
+    + [CL] Check for manual calls to dpkg-maintscript-helper(1) in
+      maintainer scripts; recommend using dh_installdeb .maintscript
+      files instead.  (Closes: #917567)
+
   * t/*:
     + [CL] Apply a patch from Felix Lechner to ensure the
       debhelper-compat-experimental tag is run after the upgrade to
