--- a/t/tests/README
+++ b/t/tests/README
@@ -293,7 +293,10 @@ You can also run groups of tests defined by selectors such as:
     tag: runs all tests that relate to the named tag
     check: runs all tests that relate to the named Lintian check
     script: runs the named code quality script
+    harness: runs only the internal harness tests
 
+The internal harness tests cannot be disabled. They make sure that
+essential components behave as expected.
 
 The runner provides basic output for each test. For greater detail.
 please look at ./debian/test-out/${suite}/${testname}/log.
