--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,8 @@ lintian (2.5.121) UNRELEASED; urgency=medium
       debhelper-compat-experimental tag is run after the upgrade to
       debhelper compat level 12.  (MR: !117)
     + [CL] Apply a patch series from Felix Lechner to support adaptive
-      rebuilding, speeding up the test test suite speeds up by a factor of
-      17 (excluding "scripts" tests).  (MR: !118)
+      rebuilding, speeding up the test suite by a factor of 17 (excluding
+      "scripts" tests).  (MR: !118)
     + [CL] Apply a patch series from Felix Lechner to add a number of
       "internal" tests for the test apparatus itself.  (MR: !119)
     + [CL] Apply a patch series from Felix Lechner to split the
