--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.122) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 10 Jan 2019 22:24:09 +0000
+
 lintian (2.5.121) unstable; urgency=medium
 
   * Summary of tag changes:
