--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.123) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 17 Jan 2019 16:55:41 +0000
+
 lintian (2.5.122) unstable; urgency=medium
 
   * Summary of tag changes:
