--- a/t/skeletons/changes
+++ b/t/skeletons/changes
@@ -1,6 +1,8 @@
 Template-Sets:
  . (changes-builder),
- . (test-runner-tags)
+ . (test-runner-tags),
+ . (lintian-invocation)
 Fill-Targets:
  test.changes,
- . (make-builder)
+ . (make-builder),
+ . (lintian-invocation)
