--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.125) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 25 Jan 2019 09:40:59 +0100
+
 lintian (2.5.124) unstable; urgency=medium
 
   * Summary of tag changes:
