Add template set with generic test runner to all skeletons.
Installs the generic runner through a template set (instead of a
special directory).

Gbp-Dch: ignore

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/skeletons/changes
+++ b/t/skeletons/changes
@@ -1,5 +1,6 @@
 Template-Sets:
- . (changes-builder)
+ . (changes-builder),
+ . (test-runner-tags)
 Fill-Targets:
  test.changes,
  . (make-builder)
